--- a/index.html
+++ b/index.html
@@ -15,19 +15,72 @@
      
     <div  class="wrapper">
         <header  class="header">
-          <nav id="scroll" class="navbar">
+          <nav id="scroll" class="navbar top">
+               <div class="dropdownBackground">
+      <span class="arrow"></span>
+    </div>
             <a href="index.html" class="logo">
               Ali Dhuniya
             </a>
-            <ul class="nav-links">
+            <ul class="nav-links cool">
               <li class="nav-item">
                 <a class="navBar__item" href="index.html">Home</a>
+                <div class="dropdown dropdown1">
+                    <div class="bio">
+                      <img src="https://logo.clearbit.com/wesbos.com">
+                      <p>Wes Bos sure does love web development. He teaches things like JavaScript, CSS and BBQ. Wait. BBQ isn't part of web development. It should be though!</p>
+                    </div>
+                  </div>
               </li>
               <li class="nav-item">
                 <a class="navBar__item" href="./pages/about.html">About Me</a>
+                <ul class="dropdown courses">
+                    <li>
+                      <span class="code">RFB</span>
+                      <a href="https://ReactForBeginners.com">React For Beginners</a>
+                    </li>
+                    <li>
+                      <span class="code">ES6</span>
+                      <a href="https://ES6.io">ES6 For Everyone</a>
+                    </li>
+                    <li>
+                      <span class="code">NODE</span>
+                      <a href="https://LearnNode.com">Learn Node</a>
+                    </li>
+                    <li>
+                      <span class="code">STPU</span>
+                      <a href="https://SublimeTextBook.com">Sublime Text Power User</a>
+                    </li>
+                    <li>
+                      <span class="code">WTF</span>
+                      <a href="http://Flexbox.io">What The Flexbox?!</a>
+                    </li>
+                    <li>
+                      <span class="code">GRID</span>
+                      <a href="https://CSSGrid.io">CSS Grid</a>
+                    </li>
+                    <li>
+                      <span class="code">LRX</span>
+                      <a href="http://LearnRedux.com">Learn Redux</a>
+                    </li>
+                    <li>
+                      <span class="code">CLPU</span>
+                      <a href="http://CommandLinePowerUser.com">Command Line Power User</a>
+                    </li>
+                    <li>
+                      <span class="code">MMD</span>
+                      <a href="http://MasteringMarkdown.com">Mastering Markdown</a>
+                    </li>
+                  </ul>
               </li>
               <li class="nav-item">
                 <a class="navBar__item" href="./pages/services.html">Skills</a>
+                <ul class="dropdown dropdown3">
+                    <li><a class="button" href="http://twitter.com/wesbos">Twitter</a></li>
+                    <li><a class="button" href="http://facebook.com/wesbos.developer">Facebook</a></li>
+                    <li><a class="button" href="http://wesbos.com">Blog</a></li>
+                    <li><a class="button" href="http://wesbos.com/courses">Course Catalog</a></li>
+                  </ul>
               </li>
               <li class="nav-item">
                 <a class="navBar__item" href="./pages/projects.html">Projects</a>
