image slider added

--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
       </p>
     </div>
     <!-- End-description -->
+
+
+    <!-- Image Slider -->
+    <div class="imgSlider">
+      <h1 class="imgSlider__h1">Feature Projects</h1>
+      <button class="imgSlider__prevbtn" onclick="prev()"> Prev </button>
+     <a href="https://alidhuniya.github.io/HTMLCSS-Projects/Ecom/"> <img class="imgSlider__thumbnail"  id="slider" onMouseover="stopShow()" src="img/ecom.png" /></a>
+      <button class="imgSlider__prevbtn" onclick="next()"> Next </button>
+      <a class="imgSlider__hrf" href="#">See All Demo</a>
+    </div>
+    <!-- End-Image Slider -->
     
 
 <script src="main.js"></script>
