projects section added

--- a/index.html
+++ b/index.html
@@ -171,6 +171,232 @@
       <a class="imgSlider__hrf" href="#">See All Demo</a>
     </div>
     <!-- End-Image Slider -->
+
+
+    <!-- skills -->
+    <section class="skills">
+
+      <h1 class="skills__h1">Skills</h1>
+      <div class="skills__section">
+        <div class="skills__section1">
+          <h2 class="skills__h2">Programming</h2>
+          <p class="skills__P">JS, C#, Mysql</p>
+        </div>
+
+        <div class="skills__section1">
+          <h2 class="skills__h2">Pentester</h2>
+          <p class="skills__P">OSWAP</p>
+        </div>
+
+        <div class="skills__section1">
+          <h2 class="skills__h2">Design</h2>
+          <p class="skills__P">UI/UX</p>
+        </div>
+      </div>
+
+    </section>
+    <!-- End-skills -->
+
+    <!-- portfolio -->
+
+    <div class="portfolio">
+      <h1 class="portfolio__h1">All Projects</h1>
+      <div class="portfolio__container">
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/ecom.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/HTMLCSS-Projects/Ecom/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Ecommerce</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/HTMLCSS-Projects/tree/master/Ecom" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/landingpage.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/landingPages/Authorbook-branding/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Landing-page</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/landingPages/tree/master/Authorbook-branding" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/construction.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/HTMLCSS-Projects/construction-site/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Construction</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/HTMLCSS-Projects/tree/master/construction-site" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/newsletter.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/HTMLCSS-Projects/Emaildeve-Foundation/newsletter/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Newsletter-Email</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/HTMLCSS-Projects/tree/master/Emaildeve-Foundation/newsletter" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/landingpage1.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/landingPages/Sonycamera-productPage/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Landing-page</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/landingPages/tree/master/Sonycamera-productPage" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/transaction.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/HTMLCSS-Projects/Emaildeve-Foundation/transaction-email/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h5>Transaction-Email</h5>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/HTMLCSS-Projects/tree/master/Emaildeve-Foundation/transaction-email" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/agency.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/HTMLCSS-Projects/Digital%20Agency/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Digital Agency</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/HTMLCSS-Projects/tree/master/Digital%20Agency" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/landingpage3.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/landingPages/comingSoon-offer/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h5>Offer-Landingpage</h5>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/landingPages/tree/master/comingSoon-offer" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/wix.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/landingPages/wixBuilder-landingPage/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Landing-page</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/landingPages/tree/master/wixBuilder-landingPage" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/salespage.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/landingPages/salesPage-book/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Sales page</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/landingPages/tree/master/salesPage-book" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/blog.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/HTMLCSS-Projects/blog/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Blog</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/HTMLCSS-Projects/tree/master/blog" target="_blank">Code</a>
+          </div>
+        </div>
+
+        <div class="portfolio__dv">
+          <div class="portfolio__div1">
+            <img class="portfolio__image" src="img/signup.png" alt="">
+
+            <a target="_blank" href="https://alidhuniya.github.io/landingPages/emailSignup/">
+              <div class="img-overlay">
+                <div class="text"><span>Live Preview</span></div>
+              </div>
+            </a>
+          </div>
+          <div class="portfolio__div2">
+            <h4>Email-Signup</h4>
+            <a class="portfolio__href" href="https://github.com/Alidhuniya/landingPages/tree/master/emailSignup" target="_blank">Code</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End portfolio -->
     
 
 <script src="main.js"></script>
